# python-simplifier

./: .gitignore  .pypirc  README.md  pyproject.toml  requirements.txt  setup.cfg
src/: FileHelper.py  Hasher.py  Monomial.py  NumberSystems.py  Polynomial.py  Simplifier.py  imaginaryNumber.py
src/Simplifier/: FileHelper.py  Fraction.py  HashFile.py  Hasher.py  ImaginaryNumber.py  Monomial.py  NumberSystems.py  Polynomial.py  Regex.py  Simplifier.py
src/python_simplifier.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/types/: Monomial.py  Polynomial.py
