[metadata]
name = python-simplifier-ametsch
version = 0.0.2
author = ametsch
author_email = aaron1@metschnet.com
description = a package to make python programming easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ametsch/python-simplifier
project_urls =
    Bug Tracker = https://github.com/ametsch/python-simplifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src