[metadata]
name = python-simplifier
version = 1.3.0
author = Aaron Metsch
author_email = aaron1@metschnet.com
description = A module to assist in simplifying your python experience
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ametsch/python-simplifier
project_urls =
    Bug Tracker = https://github.com/ametsch/python-simplifier/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    setuptools>=42
    wheel>=0.37.1
    six>=1.16.0
    base65536>=0.1.1
    pyconverter>=0.0.2

[options.packages.find]
where = src